power: Un-idle temporarily when plugging in AC

https://bugzilla.gnome.org/show_bug.cgi?id=662972